<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateEvent"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="125dp"

                android:layout_height="32dp"
                android:layout_marginStart="16dp"

                android:text="@string/name_of_event"
                android:textColor="#000000"
                android:textSize="8pt" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="40"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="125dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:text="@string/description"
                android:textColor="#000000"
                android:textSize="8pt" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLength="70"
                android:singleLine="false"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="125dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/date"
                android:layout_width="217dp"
                android:layout_height="41dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="14dp"
                android:onClick="setDate"
                android:textColor="#000000" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="111dp"
                    android:layout_height="57dp"
                    android:layout_marginStart="16dp"
                    android:textColor="#000000"
                    android:layout_marginTop="8dp"
                    android:text="@string/max_persons"
                    android:textSize="20sp"
                    android:visibility="visible" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="132dp"
                    android:layout_height="34dp"
                    android:layout_gravity="right"
                    android:layout_marginRight="8dp"

                    android:checked="true"
                    android:text="@string/no_limit"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="8dp"
                    android:ems="10"
                    android:hint="@string/no_of_persons"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="#000000" />
            </FrameLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="152dp"
                android:layout_height="67dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="148dp"
                android:layout_marginTop="63dp"
                android:layout_marginEnd="148dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary"
                android:onClick="createBtn"
                android:text="@string/create_event" />

        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"

        android:minHeight="?attr/actionBarSize"
        android:paddingTop="@dimen/tool_bar_top_padding"
        android:transitionName="actionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>