<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AccountFragment"
    tools:showIn="@layout/activity_account_fragment">

    <LinearLayout
        android:background="#ededed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="6dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/e_mail"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_events"
            android:textColor="#000000"
            android:textSize="20sp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="#f8f8ff">

        </android.support.v7.widget.RecyclerView>


        <Button
            android:id="@+id/btnExit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:background="@color/material_drawer_divider"
            android:text="@string/exit" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>